# gnartgen

./: .gitignore  Cargo.toml
data/: gnartgen.glade  schema.sqlite
lit/: index.md
src/: main.rs
